# oxiroot

./: .gitignore  Cargo.toml  README.md  zensical.toml
.github/workflows/: ci.yml  docs.yml
crates/oxiroot/: Cargo.toml
crates/oxiroot-compress/: Cargo.toml
crates/oxiroot-compress/src/: codec.rs  header.rs  lib.rs
crates/oxiroot-compress/tests/: proptest_roundtrip.rs
crates/oxiroot-fit/: Cargo.toml
crates/oxiroot-fit/src/: data.rs  engine.rs  lib.rs  model.rs  result.rs
crates/oxiroot-fit/tests/: custom_data.rs
crates/oxiroot-hist/: Cargo.toml
crates/oxiroot-hist/examples/: bake_streamers.rs
crates/oxiroot-hist/src/: axis.rs  base.rs  collections.rs  compare.rs  derive.rs  fit.rs  graph.rs  graph2d.rs  graphmultierrors.rs  lib.rs  linalg.rs  naming.rs  objects.rs  objlist.rs  ops.rs  quick.rs  read.rs  stats.rs  tefficiency.rs  th1.rs  th2.rs  th2poly.rs  th3.rs  thnsparse.rs  threaded.rs  tprofile.rs  tprofile2d.rs  tprofile3d.rs  write.rs
crates/oxiroot-hist/tests/: analysis.rs  collections.rs  derive.rs  dirs.rs  fit.rs  graph.rs  graph2d.rs  graph_function.rs  graphmultierrors.rs  labels.rs  linalg.rs  malformed.rs  naming.rs  objlist.rs  ops.rs  persist_objects.rs  quick_hist.rs  read_compressed.rs  read_family.rs  read_integer.rs  read_th1d.rs  read_th2d.rs  read_zlib.rs  stats.rs  sumw2_varbins.rs  tefficiency.rs  th2poly.rs  thnsparse.rs  threaded.rs  tmap.rs  tprofile2d.rs  tprofile3d.rs  trait_api.rs  update.rs  write_float.rs  write_int.rs  write_multi.rs  write_th1d.rs  write_th2d.rs  write_th3d.rs  (+1 more)
crates/oxiroot-io-core/: Cargo.toml
crates/oxiroot-io-core/src/: compression.rs  error.rs  lib.rs  object.rs  streamer_gen.rs  streamer_info.rs
crates/oxiroot-io-core/src/buffer/: reader.rs
crates/oxiroot-io-core/src/file/: directory.rs  key.rs  mod.rs  rfile.rs  writer.rs
crates/oxiroot-io-core/tests/: malformed.rs  mmap.rs  proptest_buffer.rs
crates/oxiroot-plot/: Cargo.toml
crates/oxiroot-plot/src/: artists.rs  axes.rs  cmap.rs  cmap_data.rs  color.rs  colorbar.rs  draw.rs  error.rs  figure.rs  fonts.rs  gridspec.rs  legend.rs  lib.rs  mathtext.rs  style.rs  text.rs  ticker.rs  transform.rs
crates/oxiroot-plot/src/render/: mod.rs  pdf.rs  raster.rs  svg.rs
crates/oxiroot-plot/tests/: render.rs  types.rs
crates/oxiroot-rntuple/: Cargo.toml
crates/oxiroot-stat/: Cargo.toml
crates/oxiroot-stat/src/: lib.rs
crates/oxiroot-tree/: Cargo.toml
crates/oxiroot-tree/src/: basket.rs  chain.rs  entrylist.rs  lib.rs  reader.rs  streamer_gen.rs  value.rs  writer.rs
crates/oxiroot-tree/tests/: chain.rs  introspect.rs  malformed.rs  read_alias.rs  read_arrays.rs  read_clones.rs  read_flat.rs  read_friend.rs  read_jagged_flat.rs  read_leaflist.rs  read_mapset.rs  read_multidim.rs  read_nested.rs  read_ntuple.rs  read_object.rs  read_object_old.rs  read_range.rs  read_schema.rs  read_split.rs  read_vecstring.rs  read_vector.rs  read_vecvec.rs  write_multibasket.rs  write_roundtrip.rs  write_split.rs  write_streaming.rs
crates/oxiroot/examples/: analysis.rs  fit.rs  interop.rs  interop_matrix.rs  plot.rs  rntuple_nested.rs  threaded.rs  tree.rs
crates/oxiroot/src/: lib.rs
crates/oxiroot/tests/: append_rntuple.rs  plot.rs
crates/root-compress/: Cargo.toml
crates/root-hist/: Cargo.toml
crates/root-hist/src/: axis.rs  base.rs  lib.rs  th1.rs  th2.rs  th3.rs  tprofile.rs  write.rs
crates/root-hist/tests/: dirs.rs  ops.rs  read_family.rs  read_integer.rs  read_th1d.rs  read_th2d.rs  sumw2_varbins.rs  update.rs  write_multi.rs  write_th1d.rs  write_th2d.rs  write_th3d.rs  write_tprofile.rs
crates/root-io-core/: Cargo.toml
crates/root-rntuple/: Cargo.toml
crates/root-rntuple/src/: anchor.rs  column.rs  envelope.rs  field.rs  footer.rs  header.rs  lib.rs  page.rs  pagelist.rs  reader.rs  writer.rs
crates/root-rntuple/tests/: read_anchor.rs  read_fields.rs  read_values.rs  stream_write.rs  write_rntuple.rs
crates/root-rs/: Cargo.toml
crates/root-rs/examples/: analysis.rs
crates/root-rs/src/: lib.rs
docs/: hist-api-report.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: compression.md  fitting.md  graphs.md  histograms.md  (+6 more)
fixtures/: README.md  analysis.root  collections.root  graph2d.root  graph_function.root  graph_hist.root  graphmultierrors.root  graphs.root  linalg.root  objlist.root  persist_objs.root  rntuple_coltypes_uncompressed.root  rntuple_coltypes_zstd.root  rntuple_ext.root  rntuple_multicluster_vec.root  rntuple_nested_uncompressed.root  rntuple_nested_zstd.root  rntuple_realprec_uncompressed.root  rntuple_realprec_zstd.root  rntuple_scalars_uncompressed.root  rntuple_set_uncompressed.root  rntuple_set_zstd.root  rntuple_stl_uncompressed.root  rntuple_stl_zstd.root  rntuple_streamer.root  rntuple_user_uncompressed.root  rntuple_variant_uncompressed.root  tefficiency.root  th1c_uncompressed.root  th1d_lz4.root  th1d_lzma.root  th1d_uncompressed.root  th1d_zlib.root  th1d_zstd.root  th1f_uncompressed.root  th1i_uncompressed.root  th1l_uncompressed.root  th1s_uncompressed.root  th2d_uncompressed.root  th2f_uncompressed.root  (+26 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decompress.rs  rfile.rs  rntuple.rs
scripts/: build_docs.sh  dump_th1d.py  gen_analysis_fixtures.cpp  gen_big_fixture.cpp  gen_collections.cpp  gen_compressed_fixtures.cpp  gen_fixtures.py  gen_graph_function.cpp  gen_hist_streamers.cpp  gen_linalg.cpp  gen_objlist.cpp  gen_persist_objs.cpp  gen_rntuple_assoc.cpp  gen_rntuple_coltypes.cpp  gen_rntuple_ext.cpp  gen_rntuple_fixtures.cpp  gen_rntuple_nested.cpp  gen_rntuple_realprec.cpp  gen_rntuple_stl.cpp  gen_rntuple_streamer.cpp  gen_rntuple_user.cpp  gen_rntuple_variant.cpp  gen_root_fixtures.cpp  gen_tmap.cpp  gen_tree_alias.cpp  gen_tree_clones.sh  gen_tree_fixtures.py  gen_tree_friend.cpp  gen_tree_leaflist.cpp  gen_tree_mapset.sh  gen_tree_multidim.cpp  gen_tree_nested.sh  gen_tree_ntuple.cpp  gen_tree_object.sh  gen_tree_object_old.cpp  gen_tree_split.sh  gen_tree_vecstring.cpp  gen_tree_vector.cpp  gen_tree_vecvec.sh  gen_zlib_fixture.cpp  (+10 more)
(+51 files in other folders)
