[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/mathieuouillon/oxiroot"

[workspace.lints.rust]
# Pure-safe-Rust library: the only `unsafe` is the feature-gated mmap in
# oxiroot-io-core (scoped `#[allow]` + SAFETY note). Deny keeps it that way.
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
oxiroot-io-core = { path = "crates/oxiroot-io-core" }
oxiroot-compress = { path = "crates/oxiroot-compress" }
oxiroot-rntuple = { path = "crates/oxiroot-rntuple" }
oxiroot-hist = { path = "crates/oxiroot-hist" }
oxiroot-tree = { path = "crates/oxiroot-tree" }
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
