[package]
name = "oxiroot-compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ROOT compression block framing and codecs"

[dependencies]
miniz_oxide = "0.9.1"
ruzstd = "0.8.3"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode"] }
lzma-rs = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
