[package]
name = "oxiroot-fit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parametric curve fitting (Minuit2) for any 1-D data — histograms, graphs, or custom points"

[dependencies]
minuit2 = { workspace = true }
oxiroot-stat = { workspace = true }

[lints]
workspace = true
