[package]
name = "oxiroot-fit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parametric curve fitting (Minuit2) for any 1-D data — histograms, graphs, or custom points"

[dependencies]
minuit2 = { workspace = true }
oxiroot-stat = { workspace = true }
argmin = { workspace = true, optional = true }
argmin-math = { workspace = true, optional = true }

[features]
# Opt-in second minimizer backend: gradient-free Nelder–Mead via the `argmin`
# crate, selectable with `FitOptions::minimizer(Minimizer::NelderMead)`. Off by
# default; Minuit2 (always present) is the default backend.
argmin = ["dep:argmin", "dep:argmin-math"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
