[package]
name = "oxiroot-hist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Classic ROOT histograms (TH1/TH2/TH3/TProfile) read/write"

[dependencies]
oxiroot-io-core = { workspace = true }
oxiroot-compress = { workspace = true }
rayon = { version = "1", optional = true }
minuit2 = { version = "0.5", optional = true }

[features]
# Opt-in data-parallel fill helper (`fill_par`). Off by default so the default
# build stays pure std with no extra dependencies; the `ThreadedHist`
# accumulator (std::thread based) is always available.
rayon = ["dep:rayon"]
# Opt-in histogram fitting (`TH1::fit` + `TF1`), backed by the pure-Rust Minuit2
# port. Off by default to keep the core dependency-light.
fit = ["dep:minuit2"]

[lints]
workspace = true
