[package]
name = "oxiroot-hist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Classic ROOT histograms (TH1/TH2/TH3/TProfile) read/write"

[dependencies]
oxiroot-io-core = { workspace = true }
oxiroot-compress = { workspace = true }
oxiroot-stat = { workspace = true }
rayon = { version = "1", optional = true }
oxiroot-fit = { workspace = true, optional = true }

[features]
# Opt-in data-parallel fill helper (`fill_par`). Off by default so the default
# build stays pure std with no extra dependencies; the `ThreadedHist`
# accumulator (std::thread based) is always available.
rayon = ["dep:rayon"]
# Opt-in fitting: implements `FitData` for `TH1`/`TGraph` (so `h.fit(&model)`
# works) and re-exports the `oxiroot-fit` crate, which carries the Minuit2
# minimizer. Off by default to keep the core dependency-light.
fit = ["dep:oxiroot-fit"]
# Add the gradient-free Nelder–Mead (`argmin`) backend to the fitter.
argmin = ["fit", "oxiroot-fit/argmin"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
