[package]
name = "oxiroot-tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reading and writing ROOT TTree (classic columnar storage)"

[dependencies]
oxiroot-io-core = { workspace = true }
oxiroot-compress = { workspace = true }
rayon = { version = "1", optional = true }

[features]
# Decode a branch's baskets in parallel (otherwise serial, zero deps).
rayon = ["dep:rayon"]
