[package]
name = "oxiroot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust IO for the CERN ROOT file format (RNTuple + classic histograms)"

[dependencies]
oxiroot-io-core = { workspace = true }
oxiroot-compress = { workspace = true }
oxiroot-rntuple = { workspace = true }
oxiroot-hist = { workspace = true }
oxiroot-tree = { workspace = true }

[features]
# Enable the memory-mapped read path (`RFile::open_mmap`).
mmap = ["oxiroot-io-core/mmap"]
# Enable data-parallel helpers: the histogram fill (`hist::fill_par`) and
# parallel TTree basket decode.
rayon = ["oxiroot-hist/rayon", "oxiroot-tree/rayon"]
# Enable histogram fitting (`hist::TF1`, `TH1::fit`) via Minuit2.
fit = ["oxiroot-hist/fit"]
