[package]
name = "oxiroot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust IO for the CERN ROOT file format (RNTuple + classic histograms)"

[dependencies]
oxiroot-io-core = { workspace = true }
oxiroot-compress = { workspace = true }
oxiroot-rntuple = { workspace = true }
oxiroot-hist = { workspace = true }
oxiroot-tree = { workspace = true }
oxiroot-fit = { workspace = true, optional = true }
oxiroot-plot = { workspace = true, optional = true }

[features]
# Enable the memory-mapped read path (`RFile::open_mmap`).
mmap = ["oxiroot-io-core/mmap"]
# Enable data-parallel helpers: the histogram fill (`hist::fill_par`) and
# parallel TTree basket decode.
rayon = ["oxiroot-hist/rayon", "oxiroot-tree/rayon"]
# Enable curve fitting (`oxiroot::fit`) via Minuit2: the `oxiroot-fit` engine
# plus the `FitData` impls for `TH1`/`TGraph` so `h.fit(&model)` works. When the
# `plot` feature is also on, this lights up `Axes::model` (fit-curve overlay).
fit = ["oxiroot-hist/fit", "dep:oxiroot-fit", "oxiroot-plot?/fit"]
# Also build the gradient-free Nelder–Mead (`argmin`) minimizer backend.
argmin = ["fit", "oxiroot-hist/argmin", "oxiroot-fit/argmin"]
# Enable plotting (`oxiroot::plot`): render TH1/TH2/TGraph/TProfile to SVG/PNG
# with a matplotlib-like API and mplhep style. Pulls tiny-skia, ab_glyph, and
# the ReX TeX engine (git dependency) for `$…$` math labels.
plot = ["dep:oxiroot-plot"]

# Build docs.rs with every feature so fitting, the argmin backend, rayon, and
# mmap all appear in the rendered API reference.
[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
