[package]
name = "root-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust IO for the CERN ROOT file format (RNTuple + classic histograms)"

[dependencies]
root-io-core = { workspace = true }
root-compress = { workspace = true }
root-rntuple = { workspace = true }
root-hist = { workspace = true }
